test/integration/httproute/manifests/backends/1_route_filter_ko_mirror/route-1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo-1
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "example.haproxy"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /route1
    filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: http-echo-mirror
          port: 80
